k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../docker-compose.yaml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/est-kubernetes-default: "true"
        io.kompose.service: api
    spec:
      containers:
        - image: vitorhm/est-kubernetes:${API_VERSION}
          name: api
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
