k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file ../docker-compose.yaml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file ../docker-compose.yaml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/est-kubernetes-default: "true"
        io.kompose.service: mysql
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: est
            - name: MYSQL_PASSWORD
              value: est
            - name: MYSQL_ROOT_PASSWORD
              value: root
            - name: MYSQL_USER
              value: est
          image: mysql:${MYSQL_VERSION}
          name: mysql
          ports:
            - containerPort: 3306
          resources: {}
      restartPolicy: Always
status: {}
