k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estudo
spec:
  type: NodePort
  selector:
    app: estudo
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000
