k8s/est-kubernetes-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: est-kubernetes-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/est-kubernetes-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/est-kubernetes-default: "true"
